[gd_scene load_steps=2 format=3 uid="uid://c7jyxx5l3urm6"]

[ext_resource type="Script" path="res://Enemy/wave_manager.gd" id="1_xr5h3"]

[node name="Wave Manager" type="Node2D"]
script = ExtResource("1_xr5h3")

[node name="SpawnDelay" type="Timer" parent="."]
wait_time = 2.0

[node name="WaveDelay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="SpawnDelay" to="." method="spawnDelayTimeout"]
[connection signal="timeout" from="WaveDelay" to="." method="waveDelayTimeout"]
